force-app/main/default/objects/Assessment__c/fields/TAM__c.field-meta.xml
<CustomField>
    <fullName>TAM__c</fullName>
    <description>CC BWRD TAM Score Manual</description>
    <inlineHelpText>Total Available Market. What is the total amount of dollars spent on products annually in this market? New markets are also possible. Think Airbnb. Sometimes an existing TAM can be non-existent, but a product can still have legs.</inlineHelpText>
    <label>TAM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(1) $100M or less</fullName>
            </value>
            <value>
                <fullName>(2) $100M-$500M</fullName>
            </value>
            <value>
                <fullName>(3) $550M-$1B</fullName>
            </value>
            <value>
                <fullName>(4) $1B</fullName>
            </value>
            <value>
                <fullName>(5) $2B+</fullName>
            </value>
            <value>
                <fullName>1 - $100M or less</fullName>
                <isActive>false</isActive>
                <label>1 - $100M or less</label>
            </value>
            <value>
                <fullName>2 - $100M - $500M</fullName>
                <isActive>false</isActive>
                <label>2 - $100M - $500M</label>
            </value>
            <value>
                <fullName>3 - $550M - $1B</fullName>
                <isActive>false</isActive>
                <label>3 - $550M - $1B</label>
            </value>
            <value>
                <fullName>4 - $1B</fullName>
                <isActive>false</isActive>
                <label>4 - $1B</label>
            </value>
            <value>
                <fullName>5 - $2B+</fullName>
                <isActive>false</isActive>
                <label>5 - $2B+</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>