force-app/main/default/objects/Assessment__c/fields/TAM_Weight__c.field-meta.xml
<CustomField>
    <fullName>TAM_Weight__c</fullName>
    <defaultValue>1</defaultValue>
    <label>TAM Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>