force-app/main/default/objects/Assessment__c/fields/TAM_Weighted_Score__c.field-meta.xml
<CustomField>
    <fullName>TAM_Weighted_Score__c</fullName>
    <description>CC BWRD Calculated TAM with Weight, Auto</description>
    <formula>CASE(TAM__c, 
      &apos;(1) $100M or less&apos;, 1 * TAM_Weight__c, 
      &apos;(2) $100M-$500M&apos;, 2 * TAM_Weight__c,
      &apos;(3) $550M-$1B&apos;, 3 * TAM_Weight__c,
      &apos;(4) $1B&apos;, 4 * TAM_Weight__c,
      &apos;(5) $2B+&apos;, 5 * TAM_Weight__c,
      0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TAM Weighted Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>