force-app/main/default/objects/Assessment__c/fields/Target_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Target_Buyer__c</fullName>
    <description>CC BWRD Target Buyer Manual</description>
    <label>Target Buyer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(1) C-Suite</fullName>
            </value>
            <value>
                <fullName>(2) VP</fullName>
            </value>
            <value>
                <fullName>(3) Director</fullName>
            </value>
            <value>
                <fullName>(4) Manager</fullName>
            </value>
            <value>
                <fullName>(5) User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>