force-app/main/default/objects/Assessment__c/fields/Target_Buyer_Weight__c.field-meta.xml
<CustomField>
    <fullName>Target_Buyer_Weight__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Target Buyer Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>