force-app/main/default/objects/Assessment__c/fields/Target_Buyer_Weighted_Score__c.field-meta.xml
<CustomField>
    <fullName>Target_Buyer_Weighted_Score__c</fullName>
    <formula>CASE( Target_Buyer__c ,
&apos;(1) C-Suite&apos;, 1 * Target_Buyer_Weight__c,
&apos;(2) VP&apos;, 2 * Target_Buyer_Weight__c,
&apos;(3) Director&apos;, 3 * Target_Buyer_Weight__c,
&apos;(4) Manager&apos;, 4 * Target_Buyer_Weight__c,
&apos;(5) User&apos;, 5 * Target_Buyer_Weight__c,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Buyer Weighted Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>