force-app/main/default/objects/Assessment__c/fields/Time_to_Value__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Value__c</fullName>
    <description>CC BWRD Time To Value</description>
    <inlineHelpText>What is the ROI for the customer? (this is the time it takes for a customer to extract value, financial or non-financial, from a product)</inlineHelpText>
    <label>Time to Value for Buyer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(1) More than 2 years</fullName>
            </value>
            <value>
                <fullName>(2) 2 years or less</fullName>
            </value>
            <value>
                <fullName>(3) 18 months or less</fullName>
            </value>
            <value>
                <fullName>(4) 1 year or less</fullName>
            </value>
            <value>
                <fullName>(5) 6 months or less</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>