force-app/main/default/objects/Assessment__c/fields/Time_to_Value_Weight__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Value_Weight__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Time to Value for Buyer Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>