force-app/main/default/objects/Assessment__c/fields/Time_to_Value_Weighted_Score__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Value_Weighted_Score__c</fullName>
    <description>CC BWRD Time to Value Weighted Score Auto</description>
    <formula>CASE( Time_to_Value__c,
&apos;(1) More than 2 years&apos;, 1 * Time_to_Value_Weight__c,
&apos;(2) 2 years or less&apos;, 2 * Time_to_Value_Weight__c,
&apos;(3) 18 months or less&apos;, 3 * Time_to_Value_Weight__c,
&apos;(4) 1 year or less&apos;, 4 * Time_to_Value_Weight__c,
&apos;(5) 6 months or less&apos;, 5 * Time_to_Value_Weight__c,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time to Value for Buyer Weighted Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>