force-app/main/default/objects/Assessment__c/fields/Total_Possible_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Possible_Score__c</fullName>
    <defaultValue>74</defaultValue>
    <description>CC BWRD Total Possible Score Manual</description>
    <label>Total Possible Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>