force-app/main/default/objects/Assessment__c/fields/Total_Weighted_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Weighted_Score__c</fullName>
    <description>CC BWRD Total Weighted Score Adding the Subtotals together via workflow rule because of Formula Limits Auto</description>
    <inlineHelpText>Calculated when status is set to complete.</inlineHelpText>
    <label>Total Weighted Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>