force-app/main/default/objects/Assessment__c/fields/Use__c.field-meta.xml
<CustomField>
    <fullName>Use__c</fullName>
    <description>CC BWRD Use Manual</description>
    <label>Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(1) Personal</fullName>
            </value>
            <value>
                <fullName>(2) Work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>