force-app/main/default/objects/Assessment__c/fields/Use_Weight__c.field-meta.xml
<CustomField>
    <fullName>Use_Weight__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Use Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>