force-app/main/default/objects/Assessment__c/fields/Use_Weighted_Score__c.field-meta.xml
<CustomField>
    <fullName>Use_Weighted_Score__c</fullName>
    <description>CC BWRD Use Weight Auto</description>
    <formula>CASE(  Use__c,
&apos;(1) Personal&apos;, 1 * Use_Weight__c,
&apos;(2) Work&apos;, 2 * Use_Weight__c,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Use Weighted Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>