force-app/main/default/objects/Assessment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Idea__c</columns>
    <columns>BWRD_User__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Total_Possible_Score__c</columns>
    <columns>Total_Weighted_Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>