force-app/main/default/objects/Assessment__c/listViews/BWRD_Assessments_Complete.listView-meta.xml
<ListView>
    <fullName>BWRD_Assessments_Complete</fullName>
    <columns>NAME</columns>
    <columns>BWRD_User__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Total_Possible_Score__c</columns>
    <columns>Total_Weighted_Score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </filters>
    <label>BWRD Assessments - Complete</label>
    <sharedTo>
        <group>BWRD_Team</group>
        <group>SF_Admin_Team</group>
    </sharedTo>
</ListView>