force-app/main/default/objects/Assessment__c/listViews/My_Incomplete_Assessments.listView-meta.xml
<ListView>
    <fullName>My_Incomplete_Assessments</fullName>
    <columns>NAME</columns>
    <columns>BWRD_User__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Report_Boolean__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>My Incomplete Assessments</label>
    <sharedTo>
        <group>BWRD_Team</group>
        <group>SF_Admin_Team</group>
        <group>Ventures_Leaders</group>
    </sharedTo>
</ListView>